shared/newton_dynamics/newton.odin


    @(link_name="NewtonWorldGetBodyCount")
    NewtonWorldGetBodyCount :: proc(newtonWorld : ^NewtonWorld) -> i32 ---

    @(link_name="NewtonWorldGetConstraintCount")
    NewtonWorldGetConstraintCount :: proc(newtonWorld : ^NewtonWorld) -> i32 ---

    @(link_name="NewtonWorldFindJoint")
    NewtonWorldFindJoint :: proc(body0 : ^NewtonBody, body1 : ^NewtonBody) -> ^NewtonJoint ---

    @(link_name="NewtonIslandGetBody")
    NewtonIslandGetBody :: proc(island : rawptr, bodyIndex : i32) -> ^NewtonBody ---

    @(link_name="NewtonIslandGetBodyAABB")
    NewtonIslandGetBodyAABB :: proc(island : rawptr, bodyIndex : i32, p0 : ^dFloat, p1 : ^dFloat) ---

    @(link_name="NewtonMaterialCreateGroupID")
    NewtonMaterialCreateGroupID :: proc(newtonWorld : ^NewtonWorld) -> i32 ---

    @(link_name="NewtonMaterialGetDefaultGroupID")
    NewtonMaterialGetDefaultGroupID :: proc(newtonWorld : ^NewtonWorld) -> i32 ---

    @(link_name="NewtonMaterialDestroyAllGroupID")
    NewtonMaterialDestroyAllGroupID :: proc(newtonWorld : ^NewtonWorld) ---

    @(link_name="NewtonMaterialGetUserData")
    NewtonMaterialGetUserData :: proc(newtonWorld : ^NewtonWorld, id0 : i32, id1 : i32) -> rawptr ---

    @(link_name="NewtonMaterialSetSurfaceThickness")
    NewtonMaterialSetSurfaceThickness :: proc(newtonWorld : ^NewtonWorld, id0 : i32, id1 : i32, thickness : dFloat) ---

    @(link_name="NewtonMaterialSetCallbackUserData")
    NewtonMaterialSetCallbackUserData :: proc(newtonWorld : ^NewtonWorld, id0 : i32, id1 : i32, userData : rawptr) ---

    @(link_name="NewtonMaterialSetContactGenerationCallback")
    NewtonMaterialSetContactGenerationCallback :: proc(newtonWorld : ^NewtonWorld, id0 : i32, id1 : i32, contactGeneration : NewtonOnContactGeneration) ---

    @(link_name="NewtonMaterialSetCompoundCollisionCallback")
    NewtonMaterialSetCompoundCollisionCallback :: proc(newtonWorld : ^NewtonWorld, id0 : i32, id1 : i32, compoundAabbOverlap : NewtonOnCompoundSubCollisionAABBOverlap) ---

    @(link_name="NewtonMaterialSetCollisionCallback")
    NewtonMaterialSetCollisionCallback :: proc(newtonWorld : ^NewtonWorld, id0 : i32, id1 : i32, aabbOverlap : NewtonOnAABBOverlap, process : NewtonContactsProcess) ---

    @(link_name="NewtonMaterialSetDefaultSoftness")
    NewtonMaterialSetDefaultSoftness :: proc(newtonWorld : ^NewtonWorld, id0 : i32, id1 : i32, value : dFloat) ---

    @(link_name="NewtonMaterialSetDefaultElasticity")
    NewtonMaterialSetDefaultElasticity :: proc(newtonWorld : ^NewtonWorld, id0 : i32, id1 : i32, elasticCoef : dFloat) ---

    @(link_name="NewtonMaterialSetDefaultCollidable")
    NewtonMaterialSetDefaultCollidable :: proc(newtonWorld : ^NewtonWorld, id0 : i32, id1 : i32, state : i32) ---

    @(link_name="NewtonMaterialSetDefaultFriction")
    NewtonMaterialSetDefaultFriction :: proc(newtonWorld : ^NewtonWorld, id0 : i32, id1 : i32, staticFriction : dFloat, kineticFriction : dFloat) ---

    @(link_name="NewtonMaterialJointResetIntraJointCollision")
    NewtonMaterialJointResetIntraJointCollision :: proc(newtonWorld : ^NewtonWorld, id0 : i32, id1 : i32) ---

    @(link_name="NewtonMaterialJointResetSelftJointCollision")
    NewtonMaterialJointResetSelftJointCollision :: proc(newtonWorld : ^NewtonWorld, id0 : i32, id1 : i32) ---

    @(link_name="NewtonWorldGetFirstMaterial")
    NewtonWorldGetFirstMaterial :: proc(newtonWorld : ^NewtonWorld) -> ^NewtonMaterial ---

    @(link_name="NewtonWorldGetNextMaterial")
    NewtonWorldGetNextMaterial :: proc(newtonWorld : ^NewtonWorld, material : ^NewtonMaterial) -> ^NewtonMaterial ---

    @(link_name="NewtonWorldGetFirstBody")
    NewtonWorldGetFirstBody :: proc(newtonWorld : ^NewtonWorld) -> ^NewtonBody ---

    @(link_name="NewtonWorldGetNextBody")
    NewtonWorldGetNextBody :: proc(newtonWorld : ^NewtonWorld, curBody : ^NewtonBody) -> ^NewtonBody ---

    @(link_name="NewtonMaterialGetMaterialPairUserData")
    NewtonMaterialGetMaterialPairUserData :: proc(material : ^NewtonMaterial) -> rawptr ---

    @(link_name="NewtonMaterialGetContactFaceAttribute")
    NewtonMaterialGetContactFaceAttribute :: proc(material : ^NewtonMaterial) -> u32 ---

    @(link_name="NewtonMaterialGetBodyCollidingShape")
    NewtonMaterialGetBodyCollidingShape :: proc(material : ^NewtonMaterial, body : ^NewtonBody) -> ^NewtonCollision ---

    @(link_name="NewtonMaterialGetContactNormalSpeed")
    NewtonMaterialGetContactNormalSpeed :: proc(material : ^NewtonMaterial) -> dFloat ---

    @(link_name="NewtonMaterialGetContactForce")
    NewtonMaterialGetContactForce :: proc(material : ^NewtonMaterial, body : ^NewtonBody, force : ^dFloat) ---

    @(link_name="NewtonMaterialGetContactPositionAndNormal")
    NewtonMaterialGetContactPositionAndNormal :: proc(material : ^NewtonMaterial, body : ^NewtonBody, posit : ^dFloat, normal : ^dFloat) ---

    @(link_name="NewtonMaterialGetContactTangentDirections")
    NewtonMaterialGetContactTangentDirections :: proc(material : ^NewtonMaterial, body : ^NewtonBody, dir0 : ^dFloat, dir1 : ^dFloat) ---

    @(link_name="NewtonMaterialGetContactTangentSpeed")
    NewtonMaterialGetContactTangentSpeed :: proc(material : ^NewtonMaterial, index : i32) -> dFloat ---

    @(link_name="NewtonMaterialGetContactMaxNormalImpact")
    NewtonMaterialGetContactMaxNormalImpact :: proc(material : ^NewtonMaterial) -> dFloat ---

    @(link_name="NewtonMaterialGetContactMaxTangentImpact")
    NewtonMaterialGetContactMaxTangentImpact :: proc(material : ^NewtonMaterial, index : i32) -> dFloat ---

    @(link_name="NewtonMaterialGetContactPenetration")
    NewtonMaterialGetContactPenetration :: proc(material : ^NewtonMaterial) -> dFloat ---

    @(link_name="NewtonMaterialSetAsSoftContact")
    NewtonMaterialSetAsSoftContact :: proc(material : ^NewtonMaterial, relaxation : dFloat) ---

    @(link_name="NewtonMaterialSetContactSoftness")
    NewtonMaterialSetContactSoftness :: proc(material : ^NewtonMaterial, softness : dFloat) ---

    @(link_name="NewtonMaterialSetContactThickness")
    NewtonMaterialSetContactThickness :: proc(material : ^NewtonMaterial, thickness : dFloat) ---

    @(link_name="NewtonMaterialSetContactElasticity")
    NewtonMaterialSetContactElasticity :: proc(material : ^NewtonMaterial, restitution : dFloat) ---

    @(link_name="NewtonMaterialSetContactFrictionState")
    NewtonMaterialSetContactFrictionState :: proc(material : ^NewtonMaterial, state : i32, index : i32) ---

    @(link_name="NewtonMaterialSetContactFrictionCoef")
    NewtonMaterialSetContactFrictionCoef :: proc(material : ^NewtonMaterial, staticFrictionCoef : dFloat, kineticFrictionCoef : dFloat, index : i32) ---

    @(link_name="NewtonMaterialSetContactNormalAcceleration")
    NewtonMaterialSetContactNormalAcceleration :: proc(material : ^NewtonMaterial, accel : dFloat) ---

    @(link_name="NewtonMaterialSetContactNormalDirection")
    NewtonMaterialSetContactNormalDirection :: proc(material : ^NewtonMaterial, directionVector : ^dFloat) ---

    @(link_name="NewtonMaterialSetContactPosition")
    NewtonMaterialSetContactPosition :: proc(material : ^NewtonMaterial, position : ^dFloat) ---

    @(link_name="NewtonMaterialSetContactTangentFriction")
    NewtonMaterialSetContactTangentFriction :: proc(material : ^NewtonMaterial, friction : dFloat, index : i32) ---

    @(link_name="NewtonMaterialSetContactTangentAcceleration")
    NewtonMaterialSetContactTangentAcceleration :: proc(material : ^NewtonMaterial, accel : dFloat, index : i32) ---

    @(link_name="NewtonMaterialContactRotateTangentDirections")
    NewtonMaterialContactRotateTangentDirections :: proc(material : ^NewtonMaterial, directionVector : ^dFloat) ---

    @(link_name="NewtonMaterialGetContactPruningTolerance")
    NewtonMaterialGetContactPruningTolerance :: proc(contactJoint : ^NewtonJoint) -> dFloat ---

    @(link_name="NewtonMaterialSetContactPruningTolerance")
    NewtonMaterialSetContactPruningTolerance :: proc(contactJoint : ^NewtonJoint, tolerance : dFloat) ---

    @(link_name="NewtonCreateNull")
    NewtonCreateNull :: proc(newtonWorld : ^NewtonWorld) -> ^NewtonCollision ---

    @(link_name="NewtonCreateSphere")
    NewtonCreateSphere :: proc(newtonWorld : ^NewtonWorld, radius : dFloat, shapeID : i32, offsetMatrix : ^dFloat) -> ^NewtonCollision ---

    @(link_name="NewtonCreateBox")
    NewtonCreateBox :: proc(newtonWorld : ^NewtonWorld, dx : dFloat, dy : dFloat, dz : dFloat, shapeID : i32, offsetMatrix : ^dFloat) -> ^NewtonCollision ---

    @(link_name="NewtonCreateCone")
    NewtonCreateCone :: proc(newtonWorld : ^NewtonWorld, radius : dFloat, height : dFloat, shapeID : i32, offsetMatrix : ^dFloat) -> ^NewtonCollision ---

    @(link_name="NewtonCreateCapsule")
    NewtonCreateCapsule :: proc(newtonWorld : ^NewtonWorld, radius0 : dFloat, radius1 : dFloat, height : dFloat, shapeID : i32, offsetMatrix : ^dFloat) -> ^NewtonCollision ---

    @(link_name="NewtonCreateCylinder")
    NewtonCreateCylinder :: proc(newtonWorld : ^NewtonWorld, radio0 : dFloat, radio1 : dFloat, height : dFloat, shapeID : i32, offsetMatrix : ^dFloat) -> ^NewtonCollision ---

    @(link_name="NewtonCreateChamferCylinder")
    NewtonCreateChamferCylinder :: proc(newtonWorld : ^NewtonWorld, radius : dFloat, height : dFloat, shapeID : i32, offsetMatrix : ^dFloat) -> ^NewtonCollision ---

    @(link_name="NewtonCreateConvexHull")
    NewtonCreateConvexHull :: proc(newtonWorld : ^NewtonWorld, count : i32, vertexCloud : ^dFloat, strideInBytes : i32, tolerance : dFloat, shapeID : i32, offsetMatrix : ^dFloat) -> ^NewtonCollision ---

    @(link_name="NewtonCreateConvexHullFromMesh")
    NewtonCreateConvexHullFromMesh :: proc(newtonWorld : ^NewtonWorld, mesh : ^NewtonMesh, tolerance : dFloat, shapeID : i32) -> ^NewtonCollision ---

    @(link_name="NewtonCollisionGetMode")
    NewtonCollisionGetMode :: proc(convexCollision : ^NewtonCollision) -> i32 ---

    @(link_name="NewtonCollisionSetMode")
    NewtonCollisionSetMode :: proc(convexCollision : ^NewtonCollision, mode : i32) ---

    @(link_name="NewtonConvexHullGetFaceIndices")
    NewtonConvexHullGetFaceIndices :: proc(convexHullCollision : ^NewtonCollision, face : i32, faceIndices : ^i32) -> i32 ---

    @(link_name="NewtonConvexHullGetVertexData")
    NewtonConvexHullGetVertexData :: proc(convexHullCollision : ^NewtonCollision, vertexData : ^^dFloat, strideInBytes : ^i32) -> i32 ---

    @(link_name="NewtonConvexCollisionCalculateVolume")
    NewtonConvexCollisionCalculateVolume :: proc(convexCollision : ^NewtonCollision) -> dFloat ---

    @(link_name="NewtonConvexCollisionCalculateInertialMatrix")
    NewtonConvexCollisionCalculateInertialMatrix :: proc(convexCollision : ^NewtonCollision, inertia : ^dFloat, origin : ^dFloat) ---

    @(link_name="NewtonConvexCollisionCalculateBuoyancyVolume")
    NewtonConvexCollisionCalculateBuoyancyVolume :: proc(convexCollision : ^NewtonCollision, matrix4x4 : ^dFloat, fluidPlane : ^dFloat, centerOfBuoyancy : ^dFloat) -> dFloat ---

    @(link_name="NewtonCollisionDataPointer")
    NewtonCollisionDataPointer :: proc(convexCollision : ^NewtonCollision) -> rawptr ---

    @(link_name="NewtonCreateCompoundCollision")
    NewtonCreateCompoundCollision :: proc(newtonWorld : ^NewtonWorld, shapeID : i32) -> ^NewtonCollision ---

    @(link_name="NewtonCreateCompoundCollisionFromMesh")
    NewtonCreateCompoundCollisionFromMesh :: proc(newtonWorld : ^NewtonWorld, mesh : ^NewtonMesh, hullTolerance : dFloat, shapeID : i32, subShapeID : i32) -> ^NewtonCollision ---

    @(link_name="NewtonCompoundCollisionBeginAddRemove")
    NewtonCompoundCollisionBeginAddRemove :: proc(compoundCollision : ^NewtonCollision) ---

    @(link_name="NewtonCompoundCollisionAddSubCollision")
    NewtonCompoundCollisionAddSubCollision :: proc(compoundCollision : ^NewtonCollision, convexCollision : ^NewtonCollision) -> rawptr ---
